# pacer

./: .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
go/: go.mod  go.sum
go/bench/: loadgen.go  profile.sh  run_bench.sh
go/cmd/controller/: main.go
go/cmd/server/: main.go
go/internal/bid/: handler.go  handler_test.go  integration_test.go  metrics.go
go/internal/budget/: naive_store.go  naive_store_test.go  store.go  store_test.go
go/internal/controller/: pid.go  pid_test.go  target.go  target_test.go
go/internal/model/: features.go  features_test.go  onnx.go  onnx_test.go
python/: pyproject.toml
python/pacer/data/: features.py
python/pacer/eval/: baselines.py  budget_sizing.py  delivery_metrics.py  metrics.py  pacing_metrics.py  plots.py  sim_harness.py
python/pacer/models/: calibrate.py  deepfm.py  export.py  lr.py  train.py  train_ctr.py
python/pacer/sim/: auction.py  burst.py  campaign.py  engine.py  pacing_mode.py  pid.py  stratified.py  target.py  throttle.py  traffic.py  tuning.py  windup_demo.py
python/scripts/: gen_feature_fixture.py  gen_model_fixture.py  gen_pid_fixture.py
python/tests/: test_auction.py  test_baselines.py  test_burst.py  test_calibrate.py  test_campaign.py  test_delivery_metrics.py  test_engine.py  test_features.py  test_metrics.py  test_models.py  test_onnx_parity.py  test_pacing_metrics.py  test_pacing_mode.py  test_pid.py  test_plots.py  test_stratified.py  test_target.py  test_throttle.py  test_traffic.py  test_train.py  test_tuning.py  test_windup.py
(+15 files in other folders)
